# lang-sme

./: .build-config.yml  .cvsignore  .gitignore  .glottologid.txt  AUTHORS  CITATION.cff  ConvertingToApertium.md  KompilereFST.md  Links.md  Makefile.am  Makefile.in  Numerals.jspwiki  PXdiscussion.jspwiki  PXdiscussion.md  README  README.markdown  README.md  _config.yml  abbreviations-affixes-fst-src.md  acronyms-affixes-fst-src.md  adjectives-affixes-fst-src.md  adjectives-affixes.md  adjectives-stems-fst-src.md  adpositions-stems-fst-src.md  adverbs-stems-fst-src.md  adverbs-stems.md  autogen.sh  caseconv.fst  checker-vs-runtime-report.txt  compounding-fst-src.md  configure.ac  conjunctions-stems-fst-src.md  dependency-syntax.md  disambiguator-cg3-src.md  docu-sme-about-disamb.md  docu-sme-about-disamb.xml  docu-sme-bugs.md  docu-sme-bugs.xml  docu-sme-deptags.xml  docu-sme-dis.xml  (+156 more)
doc/: ConvertingToApertium.jspwiki  KompilereFST.jspwiki  KompilereFST.xml  Links.jspwiki  Makefile.am  Numerals.jspwiki  PXdiscussion.jspwiki  SpellerConfiguration.jspwiki  TheL2Transducer.jspwiki  WhatIsThis.jspwiki  abbreviations-stems.jspwiki  acronyms-stems.jspwiki  adjectives-affixes.jspwiki  adjectives-stems.jspwiki  adpositions-stems.jspwiki  adverbs-stems.jspwiki  conjunctions-stems.jspwiki  dependency-syntax.jspwiki  disambiguation-syntax.jspwiki  disambiguator-syntax.jspwiki  docu-mini-smi-grammartags.xml  docu-sme-about-disamb.xml  docu-sme-bugs.xml  docu-sme-dis.xml  docu-sme-flag-diacritics.xml  docu-sme-flowchart.xml  docu-sme-grammartags.xml  docu-sme-lex.xml  docu-sme-makefile.xml  docu-sme-preprocessor.xml  docu-sme-syntaxtags.xml  docu-sme-testplan.xml  docu-sme-twol.xml  functions-syntax.jspwiki  index.xml  j-sme.xml  normativity-issues.xml  nouns-affixes.jspwiki  nouns-stems.jspwiki  numerals-stems.jspwiki  (+18 more)
doc/newcg/: Grammar_Homonymy.xml  Words_Homonymy.xml  meeting_110213.jspwiki  meeting_180213.jspwiki  sets_not_in_use.jspwiki
docs/: KompilereFST.xml  Links.md  Makefile.am  Numerals.md  PXdiscussion.md  SpellerConfiguration.jspwiki.md  TheL2Transducer.jspwiki.md  WhatIsThis.md  _config.yml  adjectives-affixes.jspwiki  adjectives-affixes.md  adjectives-stems.jspwiki  adjectives-stems.md  adpositions-stems.jspwiki  adpositions-stems.md  adverbs-stems.md  clitics-morphology.md  compounding-morphology.md  conjunctions-stems.md  disambiguator-syntax.md  docu-mini-smi-grammartags.html  docu-mini-smi-grammartags.md  docu-mini-smi-grammartags.xml  docu-sme-about-disamb.html  docu-sme-about-disamb.xml  docu-sme-bugs.xml  docu-sme-dis.html  docu-sme-dis.xml  docu-sme-flag-diacritics.html  docu-sme-flag-diacritics.md  docu-sme-flowchart.html  docu-sme-grammartags.html  docu-sme-grammartags.xml  docu-sme-lex.html  docu-sme-makefile.html  docu-sme-makefile.md  docu-sme-preprocessor.html  docu-sme-preprocessor.xml  docu-sme-testplan.html  docu-sme-testplan.xml  (+44 more)
docs/badgedata/: fst-lemmacount.json  fst-variants.json  speller-suggestions.json  speller-version.json
docs/gramcheck/: index.md  sme-grc-beta2019.md
docs/newcg/: Grammar_Homonymy.html  Grammar_Homonymy.xml  Verb_Homonymy.md  Verb_Homonymy.xml  Words_Homonymy.html  Words_Homonymy.xml  cg50top.html  cg50top.xml  sets_not_in_use.jspwiki.md
docs/testlogs/: adjectives-lemmas.md  nouns-lemmas.md  propernouns-lemmas.md  speller-lemmas.md  verbs-lemmas.md
src/: .cvsignore  Makefile  Makefile.am  Makefile.hfst  Nsme-dis.rle  README  abbr-sme-lex.txt  acro-sme-lex.txt  adj-sme-lex.txt  adj-sme-morph.txt  adv-sme-lex.txt  allcaps.regex  cap-sme  case.regex  cip-rex-regis.regex  clitics-sme-lex.txt  clock-sme.lexc  closed-sme-lex.txt  compound-sme-lex.txt  conjunction-sme-lex.txt  date-sme.lexc  derivation-filter.regex  dis-tag.txt  grammar.regex  guess-script.xfst  hyph-sme.txt  interjection-sme-lex.txt  latin6-sme  linmac-sme  maketok  nameguesser.lexc  noun-sme-lex.txt  noun-sme-morph.txt  numeral-sme-lex.txt  particle-sme-lex.txt  phon-sme.xfst  poss-sme-morph.txt  pp-sme-lex.txt  pronoun-sme-lex.txt  pronoun-sme-morph.txt  (+42 more)
src/cg3/: .gitignore  Makefile.am  disambiguator.cg3  semanticroles.cg3  semsets.cg3  speech_disambiguator.cg3  valency-postspell.cg3  valency.cg3
src/duplicates/: 00_readme.txt  doublets_sme_lex.txt  multiple_entries_numeral.txt
src/filters/: .gitignore  Makefile.am  block-illegal_compound-strings.regex  change-optionally-word_boundary_to_hyphen.regex  insert-default-compounding-tags.regex  insert-default_left_compounding-tags.regex  make-optional-allegro-tags.regex  make-optional-coll-tags.regex  make-optional-lang_hom-tags.regex  remove-Err_SpaceCmp-strings.regex  remove-UseLIA-strings.regex  remove-Use_Disamb-strings.regex  remove-Use_Disamb-tags.regex  remove-Use_GC-strings.regex  remove-all_dialects_but_GG-strings.regex  remove-all_dialects_but_GS-strings.regex  remove-all_dialects_but_KJ-strings.regex  remove-allegro-tags.regex  remove-dialect-tags.regex  remove-dynamic_compound-char.regex  remove-illegal-derivation-strings-flagbased.regex  remove-illegal-derivation-strings.regex  remove-lang_hom-tags.regex  remove-rel_focus-strings.regex  remove-semantic-tags-except-prop.regex  remove-spaced-strings.regex  rename-POS_before_Der-tags.regex  rename_optional-POS_before_Der-tags.regex  reorder-semantic-tags.regex  reorder-subpos-tags.sme.regex  reorder-tags.sme.regex  split-CmpN-tags.regex
src/fst/: .dir-locals.el  Makefile.am  clitics.lexc  compounding.lexc  guesser.xfscript  phonology-L2-from-branch.twolc  phonology-L2.twolc  phonology.twolc  root.lexc  tags.yaml
src/gramchk/: gramchk_todo.txt  gramchkcorpus.txt  gramchkeval.txt  it-at-verbs-PrfPrc-TV-á.txt  it-at-verbs-Prt-Pl3-IV-a.txt  it-at-verbs-Prt-Pl3-IV-á.txt  it-at-verbs-Prt-Pl3-TV-a.txt  it-at-verbs-Prt-Pl3-TV-á.txt  it-at-verbs-Prt-Sg3-TV-a.txt  it-at-verbs-Prt-Sg3-TV-á.txt  it-at-verbs-Sg1-IV-a.txt  it-at-verbs-Sg3-IV-a.txt  it-at-verbs-Sg3-IV-á.txt  it-at-verbs-Sg3-TV-a.txt  it-at-verbs.txt  multiwordunits.txt  plan-gramchk-20130926.txt  postpositionambiguity.txt  pperrorcorups.txt  semantictags.txt  sme-gramdis.rle  xy-Nom.txt  (+4 more)
(+2258 files in other folders)
