## Process this file with automake to produce Makefile.in
## Copyright: Sámediggi/Divvun/UiT
## Licence: GPL v3+

# List all md files that should be created from source files in the
# MD_PAGES variable. The filename pattern is as follows:
#
# dir/filename.lexc => filename-dir.md

MD_PAGES=root-morphology.md          \
		  adjectives-affixes.md       \
		  nouns-affixes.md            \
		  possessive-suffixes-affixes.md \
		  verbs-affixes.md            \
		  sme-abbreviations-stems.md  \
		  sme-acronyms-stems.md       \
		  adjectives-stems.md         \
		  adpositions-stems.md        \
		  adverbs-stems.md            \
		  conjunctions-stems.md       \
		  nouns-stems.md              \
		  numerals-stems.md           \
		  particles-stems.md          \
		  pronouns-stems.md           \
		  sme-propernouns-stems.md    \
		  subjunctions-stems.md       \
		  verbs-stems.md              \
		  sme-punctuation-stems.md    \
		  disambiguator-syntax.md     \
		  functions-syntax.md         \
		  dependency-syntax.md        \
		  compounding-morphology.md

# clitics-morphology.md       \
# adjectives-oahpa-stems.md   \
# interjections-stems.md      \
# nouns-oahpa-stems.md        \
# punctuation-stems.md        \
# smi-propernouns-stems.md    \
# adjectives-oahpa-affixes.md \
# propernouns-affixes.md

include $(top_srcdir)/../giella-core/am-shared/docs-dir-include.am
